--- a/demo/scss/screen.scss
+++ b/demo/scss/screen.scss
@@ -6,6 +6,7 @@
 @import "compass/reset";
 #container{
   .header{
+    position: fixed;
     width: 100%;
     height: 30px;
     background-color: #d04451;
@@ -70,6 +71,20 @@
           width: 100%;
           height: 30px;
           border-bottom: #d0d0d0 1px solid;
+        }
+      }
+    }
+  }
+  .banner{
+    width: 100%;
+    height: 209px;
+    overflow: hidden;
+    .imgList{
+      li{
+        float: left;
+        img{
+          display: block;
+          width: 100%;
         }
       }
     }
